# ebook-resolve-move

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ebook_resolve_move.py  pyproject.toml  requirements.txt
ebook_resolve_move.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: run_tests.py  test_functions.py  test_matching_behavior.py
