[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-resolve-move"
version = "0.1.0"
description = "Safety-first ebook metadata resolver, enricher, and mover"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "pypdf",
  "rapidfuzz",
  "watchdog",
]

[project.scripts]
ebook-resolve-move = "ebook_resolve_move:main"

[tool.setuptools]
py-modules = ["ebook_resolve_move"]
